Potential overflow fix

--- a/src/components/section/Section.css
+++ b/src/components/section/Section.css
@@ -6,7 +6,8 @@
 
 }
 .section-content-wrap {
-  overflow: hidden;
+  height: auto;
+  /* overflow: hidden; */
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
 }
