--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,8 @@ body {
   --ease-out-cubic: cubic-bezier(0.215, 0.61, 0.355, 1);
   --ease-cubic: cubic-bezier(0.645, 0.045, 0.355, 1);
   --ease-out-quart: cubic-bezier(0.165, 0.84, 0.44, 1);
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 h1, h2 {
